@@ -195,7 +195,7 @@ cat >exp<<EOF
 "ms-phi-r=2",1,28
 "ms-phi-s=0",1,3
 "ms-phi-s=1",1,7
-"ms-phi-s=2",1,375
+"ms-phi-s=2",1,387
 "ms-phi-h=0",1,1
 "ms-phi-h=1",2,3
 "ms-phi-h=2",4,7
